--- a/slide/index.html
+++ b/slide/index.html
@@ -44,7 +44,7 @@
     </style>
   </head>
   <body>
-    <script src="http://gnab.github.io/remark/downloads/remark-latest.min.js"></script>
+    <script src="js/remark.min.js"></script>
     <script>
       var slideshow = remark.create({
         sourceUrl: '../javascript-function.md',
