--- a/javascript-function/samples/counter_not_work.html
+++ b/javascript-function/samples/counter_not_work.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>counter not work</title>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script>
    $(function(){
@@ -15,6 +15,6 @@
 </script>
 </head>
 <body>
-  <button id="counter">count</button>	
+  <button id="counter">count(not work)</button>	
 </body>
 </html>
