--- a/javascript-function/slide/index.html
+++ b/javascript-function/slide/index.html
@@ -32,7 +32,7 @@
         overflow: auto;
       }
       .remark-slide-content blockquote {
-        font-size: 0.8em;        
+        font-size: 0.8em;
       }
     </style>
   </head>
@@ -40,7 +40,7 @@
     <script src="js/remark.min.js"></script>
     <script>
       var slideshow = remark.create({
-        sourceUrl: '../javascript-function.md',
+        sourceUrl: '../../javascript-function.md',
         navigation: {
           scroll: false,
           click: true
