--- a/javascript-function/slide/index.html
+++ b/javascript-function/slide/index.html
@@ -43,7 +43,7 @@
         sourceUrl: '../../javascript-function.md',
         navigation: {
           scroll: false,
-          click: true
+          click: false
         }
       });
     </script>
