--- a/javascript-function/samples/list.html
+++ b/javascript-function/samples/list.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+  <meta charset="UTF-8">
+  <title>list</title>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script>
-	$(function(){
-
+  <script>
+  $(function(){
     var list = $("#button-container > button");
     var counter = function(count){
       return function(){
@@ -19,13 +18,28 @@
     }
 
   });
-	</script>
+</script>
 </head>
 <body>
   <div id="button-container">
-    <button>1</button> 
-    <button>2</button> 
-    <button>3</button> 
+    <button>0</button>
+    <button>1</button>
+    <button>2</button>
   </div>
+  <pre>
+  $(function(){
+    var list = $("#button-container > button");
+    var counter = function(count){
+      return function(){
+        alert(count);
+      };
+    };
+
+    for(var i = 0; i < list.length; i++){
+      list.eq(i).on("click", counter(i));
+    }
+
+  });
+  </pre>
 </body>
 </html>
