--- a/javascript-function/samples/list_not_work.html
+++ b/javascript-function/samples/list_not_work.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+  <meta charset="UTF-8">
+  <title>list not work</title>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script>
-	$(function(){
-
+  <script>
+  $(function(){
     var list = $("#button-container > button");
     for(var i = 0; i < list.length; i++){
       list.eq(i).on("click", function(){
         alert(i);
       });
     }
-
   });
-	</script>
+</script>
 </head>
 <body>
   <div id="button-container">
-    <button>1</button> 
-    <button>2</button> 
-    <button>3</button> 
+    <button>0</button>
+    <button>1</button>
+    <button>2</button>
   </div>
+  <pre>
+  $(function(){
+    var list = $("#button-container > button");
+    for(var i = 0; i < list.length; i++){
+      list.eq(i).on("click", function(){
+        alert(i);
+      });
+    }
+  });
+  </pre>
 </body>
 </html>
