スライドとドキュメントのmarkdownを分けた

--- a/javascript-function/slide/index.html
+++ b/javascript-function/slide/index.html
@@ -40,7 +40,7 @@
     <script src="js/remark.min.js"></script>
     <script>
       var slideshow = remark.create({
-        sourceUrl: '../../javascript-function.md',
+        sourceUrl: './javascript-function.md',
         navigation: {
           scroll: false,
           click: false
