--- a/recommend-books-for-engineers/index.html
+++ b/recommend-books-for-engineers/index.html
@@ -70,9 +70,9 @@ class: center, middle
 
 * [MUST]**<a href="http://www.amazon.co.jp/exec/obidos/ASIN/4274066940/stfila-22/ref=nosim/" name="amazletlink" target="_blank">アジャイルプラクティス 達人プログラマに学ぶ現場開発者の習慣</a>**
 * [SHOULD]<a href="http://www.amazon.co.jp/exec/obidos/ASIN/4621066080/stfila-22/ref=nosim/" name="amazletlink" target="_blank">人月の神話【新装版】</a>
-* [SHOULD]<a href="http://www.amazon.co.jp/exec/obidos/ASIN/489471275X/stfila-22/ref=nosim/" name="amazletlink" target="_blank">XPエクストリーム・プログラミング入門―ソフトウェア開発の究極の手法</a>
+* [SHOULD]<a href="http://www.amazon.co.jp/exec/obidos/ASIN/489471275X/stfila-22/ref=nosim/" name="amazletlink" target="_blank">XPエクストリーム・プログラミング入門</a>
 * [SHOULD]<a href="http://www.amazon.co.jp/exec/obidos/ASIN/4274068560/stfila-22/ref=nosim/" name="amazletlink" target="_blank">アジャイルサムライ−達人開発者への道−</a>
-* [SHOULD]<a href="http://www.amazon.co.jp/exec/obidos/ASIN/4839924023/stfila-22/ref=nosim/" name="amazletlink" target="_blank">アジャイルな見積りと計画づくり ~価値あるソフトウェアを育てる概念と技法~</a>
+* [SHOULD]<a href="http://www.amazon.co.jp/exec/obidos/ASIN/4839924023/stfila-22/ref=nosim/" name="amazletlink" target="_blank">アジャイルな見積りと計画づくり</a>
 * [SHOULD]<a href="http://www.amazon.co.jp/exec/obidos/ASIN/4274066983/stfila-22/ref=nosim/" name="amazletlink" target="_blank">アジャイルレトロスペクティブズ　強いチームを育てる「ふりかえり」の手引き</a>
 * [SHOULD]<a href="http://www.amazon.co.jp/exec/obidos/ASIN/415209267X/stfila-22/ref=nosim/" name="amazletlink" target="_blank">小さなチーム、大きな仕事〔完全版〕: 37シグナルズ成功の法則</a>
 * [SHOULD][塹壕より Scrum と XP](http://www.infoq.com/jp/minibooks/scrum-xp-from-the-trenches)
