--- a/recommend-books-for-engineers/index.html
+++ b/recommend-books-for-engineers/index.html
@@ -68,7 +68,7 @@ class: center, middle
 ## Agile & Scrum & Project
 ]
 
-* [MUST]**<a href="http://www.amazon.co.jp/exec/obidos/ASIN/4274066940/stfila-22/ref=nosim/" name="amazletlink" target="_blank">アジャイルプラクティス 達人プログラマに学ぶ現場開発者の習慣</a>**
+* [MUST]**<a href="http://www.amazon.co.jp/exec/obidos/ASIN/4274066940/stfila-22/ref=nosim/" name="amazletlink" target="_blank">アジャイルプラクティス</a>**
 * [SHOULD]<a href="http://www.amazon.co.jp/exec/obidos/ASIN/4621066080/stfila-22/ref=nosim/" name="amazletlink" target="_blank">人月の神話【新装版】</a>
 * [SHOULD]<a href="http://www.amazon.co.jp/exec/obidos/ASIN/489471275X/stfila-22/ref=nosim/" name="amazletlink" target="_blank">XPエクストリーム・プログラミング入門</a>
 * [SHOULD]<a href="http://www.amazon.co.jp/exec/obidos/ASIN/4274068560/stfila-22/ref=nosim/" name="amazletlink" target="_blank">アジャイルサムライ−達人開発者への道−</a>
