--- a/recommend-books-for-engineers/index.html
+++ b/recommend-books-for-engineers/index.html
@@ -163,5 +163,6 @@ thank you!
     <script>
       var slideshow = remark.create();
     </script>
+    <script type="text/javascript" src="//typesquare.com/accessor/script/typesquare.js?g1jbfFCEps0%3D" charset="utf-8"></script>
   </body>
 </html>
